Chat messages development
Code improvements.
Added socketEvents and moved Message interface to shared values.
Changed useSocket hook to use singleton socket instance and added register event.
Added user store and handling to detect user messages.
Added date formatter to format message timestamps.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": "Jorge Mitri <mitri.dvp@gmail.com> (https://www.mitri-dvp.com/)",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
