Server configuration for deployment

--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "real-time-chat-server",
   "version": "1.0.0",
   "scripts": {
+    "start": "ts-node src/server.ts",
     "dev": "nodemon"
   },
   "keywords": [],
